--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,10 @@
 					<label class="login-name">Name</label>
 				</td>
 				<td>
-						<input class="login-name-input" type="text" name="name" value ="{{ name }}">
+						<input class="login-name-input" type="text" name="username" value ="{{ name }}">
+				</td>
+				<td class="error">
+					{{ error_username }}
 				</td>
 			</tr>
 			<tr>
