feat:	Edit commit.

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,6 +18,7 @@
 
 	</head>
 
+	<!-- <body onclick='window.location.href="https://blogproject-146209.appspot.com/blog"'> -->
 	<body onclick='window.location.href="http://localhost:8080/blog"'>
 
 	<div class="welcome-message">
