--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 		
 		<link type="text/css" rel="stylesheet" href="/static/style.css" />
 		
-		<title>
+		<title id="title">
 			FSND - Blog project
 		</title>
 
