--- a/templates/new-post.html
+++ b/templates/new-post.html
@@ -15,7 +15,7 @@
 
 		<div class="post-text">
 			<label>Post</label>
-			<textarea class=post-text-input"" name="text" value="{{ text }}"></textarea>
+			<textarea class="post-text-input" name="text" value="{{ text }}"></textarea>
 		</div>
 
 		<button>Add</button>
