--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,27 +10,46 @@
 	}
 </script>
 
-{% if items %}
-	{% for item in items %}
+{% if comments %}
+	{% for comment in comments %}
 
 		<form method='post'>
 
 			
 
-			<input type="hidden" name="edit_postID" value="{{ item.key()}}">
+			<input type="hidden" name="edit_postID" value="{{ comment.item.key()}}">
 			<div class="post">
-				<div class="post-item autor"></div>
-				<div class="post-item time_message">{{ timeMessages.pop(0) }}</div>
-				{% if user == item.creator %}
-					<button name="editButton" value="edit was pressed">Edit</button>
-				{% endif %}
-				<div class="post-item title">{{ item.title }}</div>
-				<pre class="text">{{ item.text }}</pre>
-				{% if user != item.creator %}
-					<button name="likeButton" value="liked was pressed">Like</button>
-				{% endif %}
-				<input type="button" id="button" class="comment {% if user != item.creator %} commentable {% endif %}" name="commentButton" value="comment was pressed" onclick="myFunction( {{ item.key().id() }} )">Comment</button>
-				<textarea id="comment{{ item.key().id() }}" class="comment-text-input hidden" name="text" value="Write here...">textarea</textarea>
+				<div class="post-header post-container">
+					<div class="post-item post-title h1">{{ comment.item.title }}</div>
+					
+					{% if user == comment.item.creator %}
+					<button name="editButton" class="edit-button" value="edit was pressed">Edit</button>
+					{% endif %}
+				</div>
+				
+				<div class="post-info post-container">
+					<div class="post-item post-item_title">{{ comment.item.creator }}</div>
+					<div class="post-item post-item_time-mess">{{ comment.timeMessage }}</div>
+					<div class="post-item post-item_number-of-likes">{{ comment.numberOfLikes }} likes</div>
+					{% if user %}
+						{% if user != comment.item.creator %}
+							{% if comment.liked %}
+								<button name="likeButton" class="like-button" value="unliked was pressed">Unlike</button>
+							{% else %}
+								<button name="likeButton" class="like-button" value="liked was pressed">Like</button>
+							{% endif %}
+						{% endif %}
+					{% endif %}
+
+				</div>
+				
+
+			
+
+				<pre class="text">{{ comment.item.text }}</pre>
+				
+				<input type="button" id="button" class="comment-button {% if user != comment.item.creator %} commentable {% endif %}" name="commentButton" value="comment was pressed" onclick="myFunction( {{ comment.item.key().id() }} )">Comment</button>
+				<textarea id="comment{{ comment.item.key().id() }}" class="comment-text-input hidden" name="text" value="Write here...">textarea</textarea>
 
 
 			</div>
